welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: Boolean does not take parameters
	else(weekday == true && vacation == false) {
                                                   ^