welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if(weekday == false && vacation == false) {
		return true
	}
	else(weekday == true && vacation == false) {
		return false
	}
}
